[tool.poetry]
name = "sql-4-exp-analysis"
version = "0.1.0"
description = "A web app to build and execute SQL queries for AB test analysis."
authors = ["Ludovico Lanni <lanni.ludovico.gh@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.15.0"
pandas = "^1.5.0"
sqlparse = "^0.4.2"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
